--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
+<!-- NOTE: This file, "index.html" is not a part of the original website -->
+<!-- NOTE: This file, "index.html is responsible for GitHub pages redirecting from index.html, the default root webpage, to Homepage.html -->
+<!-- NOTE: Considering the above, renaming "Homepage.html" to "index.html" would break all "#ref" across the website, consider this a lazy workaround -->
+
 <meta http-equiv="Refresh" content="0; url='Homepage.html'" />
