On branch main  Your branch is up to date with 'origin/main'.
 Update: Typo and Image Ammendments

 Changes to be committed:
	modified:   Assets/Global/End Page Tile 1.png
	modified:   Assets/Global/End Page Tile 2.png
	modified:   Assets/Global/End Page Tile 3.png
	modified:   Assets/Global/Large Splash Image.png
	modified:   Assets/Global/Small Splash Image.png
	modified:   Who We Are.html

--- a/Who We Are.html
+++ b/Who We Are.html
@@ -103,7 +103,7 @@
           <div class="global-info-tile-text-head">
             ...MEET THE TEAM
             <div class="global-info-tile-text-des">
-              <br>Our team is made up of pad and non-paid hard working volunteers within the local community, we strive to provide as many benefits as possible for our employees although we are a non for profit
+              <br>Our team is made up of paid and non-paid hard working volunteers within the local community, we strive to provide as many benefits as possible for our employees although we are a non for profit
                   organization which allows us to provide as much money in charity as possible
               <br><br>We are currently recruiting volunteers to work weekends and be flexible, if you are interested in giving back to the community Email us a copy of your CV and someone will be in touch
             </div>
